# liteparse

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  full.Dockerfile  notes.md  package-lock.json  package.json  plan.md  playwright.config.ts  test-config.json  test.docx  tsconfig.json  typedoc.json  vite.config.ts
.changeset/: afraid-times-punch.md  busy-baths-feel.md  great-ants-report.md  itchy-peas-worry.md  seven-frogs-change.md  tall-feet-add.md  text-line-tracking.md
.github/workflows/: browser-compat.yml  ci.yml  deploy-web.yml  docker-image.yml  e2e-output.yml  ocr_servers.yml  release.yml  sync-docs.yml
.playwright-mcp/: page-2026-04-23T05-36-31-220Z.yml
cli/: README.md  parse.ts
dataset_eval_utils/: README.md  pyproject.toml
dataset_eval_utils/src/liteparse_eval/: __init__.py  evaluation.py
dataset_eval_utils/src/liteparse_eval/providers/: __init__.py
dataset_eval_utils/src/liteparse_eval/providers/llm/: __init__.py  minimax.py
dataset_eval_utils/tests/: test_minimax_integration.py  test_minimax_provider.py
ocr/easyocr/: Dockerfile  README.md  pyproject.toml  server.py
ocr/paddleocr/: Dockerfile  README.md  server.py  test_server.py
public/: pdfjs
scripts/: test-build.sh
scripts/browser-compat/: entry.ts  vite.config.ts
src/: index.ts  lib.ts
src/conversion/: convertToPdf.test.ts  convertToPdf.ts
src/core/: config.test.ts  config.ts  parser.test.ts  parser.ts  types.ts
src/output/: json.ts  (+2 more)
web/: README.md  index.html  liteparse-browser.ts  main.ts  pdfjs-renderer.ts  pdfjsImporter.ts  style.css
(+50 files in other folders)
